ADD kafka replication factor modification. MOD code so the producer runs inside a container for kafka. ADD Sonatype Nexus private docker hub.